fixed hieght and wrapiing

--- a/src/components/FloatingTabs/floating-tabs.css
+++ b/src/components/FloatingTabs/floating-tabs.css
@@ -81,6 +81,7 @@
 
 	.floating-tabs-wrapper {
 		display: flex;
+		height: 75px;
 	}
 
 	.floating-tabs-wrapper-down {
